Completed draft of implementation process section.

--- a/doc/dissertation/resources/architecture_and_algorithms.tex
+++ b/doc/dissertation/resources/architecture_and_algorithms.tex
@@ -1538,7 +1538,7 @@ They are as follows:
     \item \textbf{Random Number Generation:} It could be useful to be able to generate random numbers.
     Such a feature would likely include probabilistic distributions to assist in mathematical modelling.
     \item \textbf{Maybe:} A `Maybe' type, similar to that in Haskell.
-    This would aid in the representation of error conditions in functions.
+    This would aid in the representation of error conditions in types and functions.
     \item \textbf{Either:} Also similar to Haskell, this would allow the representation of alternates in result types, and hence also assist in the representation of error conditions.
     \item \textbf{State:} The provision of a user controlled state (and associated operations) that can be passed around functions and interacted with entirely separately from the semantic environment.
     \item \textbf{Special Numbers:} A feature providing additional number types such as complex numbers, financial numbers and arbitrary precision floating-point types.
