--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -884,3 +884,54 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   pages={215--224},
   year={2014}
 }
+
+@article{fowler2001agile,
+  title={The agile manifesto},
+  author={Fowler, Martin and Highsmith, Jim},
+  journal={Software Development},
+  volume={9},
+  number={8},
+  pages={28--35},
+  year={2001},
+  publisher={[San Francisco, CA: Miller Freeman, Inc., 1993-}
+}
+
+@misc{ghc,
+  title = {The Glasgow Haskell Compiler},
+  author = {Ben Gamari},
+  howpublished = {\url{https://www.haskell.org/ghc/}},
+  note = {Accessed: 2017-04-15},
+  year = 2017
+}
+
+@misc{haskellstack,
+  title = {The Haskell Tool Stack},
+  author = {Stack Contributors},
+  howpublished = {\url{https://docs.haskellstack.org/en/stable/README/}},
+  note = {Accessed: 2017-04-15},
+  year = 2017
+}
+
+@misc{git_scm,
+  title = {Git},
+  author = {The Git Foundation},
+  howpublished = {\url{https://git-scm.com/}},
+  note = {Accessed: 2017-04-15},
+  year = 2017
+}
+
+@misc{sublime_text,
+  title = {Sublime Text: The Text Editor You'll Fall in Love With},
+  author = {Sublime HQ},
+  howpublished = {\url{https://www.sublimetext.com/}},
+  note = {Accessed: 2017-04-15},
+  year = 2017
+}
+
+@misc{sublime_haskell,
+  title = {SublimeHaskell},
+  author = {Alexandr Ruchkin, B. Scott Michel},
+  howpublished = {\url{https://github.com/SublimeHaskell/SublimeHaskell}},
+  note = {Accessed: 2017-04-15},
+  year = 2017
+}
