--- a/doc/dissertation/resources/conclusion.tex
+++ b/doc/dissertation/resources/conclusion.tex
@@ -1,5 +1,12 @@
 \chapter{Conclusion} % (fold)
 \label{cha:conclusion}
 A conclusion on the project, summarising how the project went, how the initial goals were (or were not) addressed, and concluding as to the project's success. 
+Do the introduction \textbf{first}. 
+
+% Highlight the achievements of the project
+% Identification of areas that went well
+% Identification of areas that could be improved 
+% Relate the work of the project to the introduction, inspiration and surrounding literature.
+% Finalise with the contributions made by the project
 
 % chapter conclusion (end)
