--- a/doc/dissertation/resources/glossary.tex
+++ b/doc/dissertation/resources/glossary.tex
@@ -180,3 +180,7 @@
         A noop or no-operation is a computer instruction that does nothing, but advances the program counter.
     }
 }
+
+\newacronym{ide}{IDE}{Integrated Development Environment}
+
+\newacronym{ghci}{GHCi}{GHC Interpreter}
