--- a/doc/dissertation/resources/introduction.tex
+++ b/doc/dissertation/resources/introduction.tex
@@ -1,3 +1,8 @@
+% Introduce the problem to be tackled
+% Use this as an opportunity to talk about the inspiration of the project
+% Contextualise the problem being tackled by the project
+% Explain why the problem is worthy of study
+% Outline the structure of the document and provide a framework for the reader of the dissertation. 
 
 \chapter{Project Introduction} % (fold)
 \label{cha:project_introduction}
