--- a/doc/dissertation/resources/testing.tex
+++ b/doc/dissertation/resources/testing.tex
@@ -17,6 +17,8 @@ This section will:
 \label{sec:the_general_testing_approach}
 % Discuss the brief consideration of user testing and examine why it was dismissed (due to the project state and requirement for significant expertise to utilise the system). 
 
+% Talk about bugs found through testing and how they influenced development/
+
 % section the_general_testing_approach (end)
 
 \section{Testing Error States} % (fold)
