Completed draft of Front-End, Metaparse implementation.

--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -171,7 +171,7 @@
 % \renewcommand{\headrulewidth}{0pt}
 % \renewcommand{\footrulewidth}{0pt}
 
-% \setlength{\parindent}{0pt}
+\setlength{\parindent}{0pt}
 % \setlength{\headheight}{14pt}
 
 \hypersetup{
@@ -233,7 +233,7 @@
     tabsize=4,
     texcomments=true,
     resetmargins=true,
-    xleftmargin=\parindent
+    % xleftmargin=\parindent
 }
 
 \newcommand{\blockfont}{\footnotesize}
