--- a/doc/dissertation/resources/glossary.tex
+++ b/doc/dissertation/resources/glossary.tex
@@ -184,3 +184,5 @@
 \newacronym{ide}{IDE}{Integrated Development Environment}
 
 \newacronym{ghci}{GHCi}{GHC Interpreter}
+
+\newacronym{api}{API}{Application Programming Interface}
