--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -935,3 +935,19 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   note = {Accessed: 2017-04-15},
   year = 2017
 }
+
+@misc{haskell_data_text,
+  title = {Data.Text},
+  author = {Bryan O'Sullivan},
+  howpublished = {\url{https://hackage.haskell.org/package/text-1.2.2.1/docs/Data-Text.html}},
+  note = {Accessed: 2017-04-15},
+  year = 2017
+}
+
+@misc{optparse_applicative,
+  title = {optparse-applicative},
+  author = {Paolo Capriotti, Huw Campbell},
+  howpublished = {\url{https://hackage.haskell.org/package/optparse-applicative}},
+  note = {Accessed: 2017-04-15},
+  year = 2017
+}
