--- a/doc/dissertation/resources/implementation.tex
+++ b/doc/dissertation/resources/implementation.tex
@@ -157,20 +157,385 @@ These issues also illustrated the downside of not scheduling work, as doing so w
 
 % section the_implementation_process (end)
 
-\section{Building the Application Framework} % (fold)
-\label{sec:building_the_application_framework}
-% The first component to be implemented, though it has been revisited
+\section{Building the Metacompiler Front-End} % (fold)
+\label{sec:building_the_metacompiler_front_end}
+The metacompiler front-end was the first component that saw any implementation work as part of the project. 
+The front end, as per the design is responsible for parsing the command-line options, loading the metaspec file and coordinating the metacompiler pipeline.
+There were few challenges during the implementation of this stage, and it proceeded smoothly.
+The metacompiler front end is contained within the files listed in the appropriate portion of Appendix~\ref{cha:software_readme}.\\
 
-% section building_the_application_framework (end)
+Loading the metaspec file was a simple task, with Haskell providing a robust API for dealing with both files (\mintinline{text}{System.IO}) and file paths (\mintinline{text}{System.FilePath}). 
+The only cases that loading the file was really concerned with were the file not being present, or the program crashing while the file was open.
+The default Haskell behaviour in the former case was acceptable, throwing a runtime exception with a descriptive error (seen in \autoref{lst:haskell_error_for_non_existent_file}).\\
+
+\begin{listing}[!htb]
+\begin{minted}[numbers=none, fontsize=\blockfont]{text}
+metaspec/simple_test.met: openFile: does not exist (No such file or directory)
+\end{minted}
+\caption{Haskell Error for Non-Existent File}
+\label{lst:haskell_error_for_non_existent_file}
+\end{listing}
+
+In the second case, however, care had to be taken as crashing with the file open may lead to a resource leak. 
+To prevent this, the implementation used the exception-safe function \mintinline{haskell}{withFile} to open the file.
+This function automatically closes the file handle when an exception is thrown, and thus prevents the resource leak.
+It made sense to wrap this primitive in another function to provide some options, which can be seen in \autoref{lst:safe_file_io_in_haskell}.
+
+\begin{listing}[!htb]
+\begin{minted}[numbers=none]{haskell}
+acquireMetaspecFile :: FilePath -> (Handle -> IO a) -> IO a
+acquireMetaspecFile file = withFile file ReadMode
+\end{minted}
+\caption{Safe File IO in Haskell}
+\label{lst:safe_file_io_in_haskell}
+\end{listing}
+
+It was as part of this that the decision to use the \mintinline{text}{Data.Text} library was made. 
+Strings in Haskell are, by default, lists of UTF-32 graphemes, and are hence fairly inefficient. 
+The \mintinline{text}{Data.Text} library provides a type for manipulating text as efficient, packed UTF-8 glyphs \citep{haskell_data_text}.
+In light of the pleasant \gls{api} for text manipulation, and the performance benefits, the decision was made to read in the file as \mintinline{haskell}{Text} instead of as a \mintinline{haskell}{String}: \mintinline{haskell}{TI.hGetContents file}.\\
+
+The front-end duties of coordinating the metacompiler pipeline come naturally from the nature of the program.
+The parser is run first, with any parse errors being handled and shown to the user.
+In the case of success, the result of this is passed into the language verification engine, which performs its own processing and returns a result.
+This pipelining of processes is illustrated in \autoref{lst:coordinating_the_metacompiler_pipeline}.
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=56]{haskell}
+case P.parseMetaspecFile filename contents of
+    Left err -> hPutStr stderr $ P.parseErrorPretty err
+    Right (ast, _) -> do
+        let (result, diagnostic) = verifyLanguage ast
+\end{minted}
+\caption{Coordinating the Metacompiler Pipeline}
+\label{lst:coordinating_the_metacompiler_pipeline}
+\end{listing}
+
+\subsection{Parsing the Command-Line Options} % (fold)
+\label{sub:parsing_the_command_line_options}
+The major implementation challenge of the metacompiler front-end was to determine the most appropriate method to parse the command-line options.
+Haskell provides some native facilities for doing so, but these are clunky, requiring the developer to manually specify help text and other facilities expected of a \gls{cli} program.
+Instead the choice was made to employ \mintinline{text}{optparse-applicative}, a library that provides an declarative interface to the building of command-line options \citep{optparse_applicative}.\\
+
+Building the command-line options in this fashion is an intuitive process, removing much of the challenge from their implementation. 
+The first step is to declare a data-type for containing the options data: in this implementation the choice was made to use record syntax as it provides automatic functions for field accesses, as seen in \autoref{lst:the_cli_options_data_type}.
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=35]{haskell}
+data CLIOptions = CLIOptions {
+    filename        :: File,
+    reportFlag      :: CmdLineFlag,
+    cleanFlag       :: CmdLineFlag,
+    langName        :: CmdString,
+    langVersion     :: CmdString,
+    verboseFlag     :: CmdLineFlag,
+    logFile         :: Maybe File,
+    outputDirectory :: Maybe File
+} deriving (Eq, Show)
+\end{minted}
+\caption{The CLI Options Data Type}
+\label{lst:the_cli_options_data_type}
+\end{listing}
+
+Once the data-type is designed, it remains to declare two things: a function to construct the options, and a set of functions declaring the command-line arguments.
+Each option is specified in a declarative format, with each function defining the type, flags, format, help text and any other necessary information for the option, as seen in \autoref{lst:applicative_option_creation}.
+The list of implemented options was taken directly from the design, and hence matches those seen in \autoref{ssub:designing_the_command_line_options}.
+These functions are then combined through sequential application (\mintinline{haskell}{<*>}) to form a parser for the command-line options.
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=103]{haskell}
+parseLangName :: Parser CmdString
+parseLangName = optional $ option str (
+        short 'n' <>
+        long "name" <>
+        help "Use the provided name STRING instead of the one embedded in\
+            \ the file." <>
+        metavar "STRING"
+    )
+\end{minted}
+\caption{Applicative Option Creation}
+\label{lst:applicative_option_creation}
+\end{listing}
+
+% subsection parsing_the_command_line_options (end)
+
+% section building_the_metacompiler_front_end (end)
 
 \section{Building the Lexer and Parser} % (fold)
 \label{sec:building_the_lexer_and_parser}
-% The precondition verifier is implemented in separate functions as much as possible. This ensures that it doesn't add unnecessary clutter to the parser itself. 
+
+Without the language \gls{ast} it would be impossible to reliably develop the verification algorithm so, mostly out of necessity, Metaparse itself was the next system component to be implemented. 
+The implementation of Metaparse involved multiple phases of implementation, each of which posed its own unique challenge
+The first was the creation of the AST data-types, which proved to be an exercise in definition rules for Haskell types.
+This was promptly followed by the development of the parser and its rapid evolution to support precondition verification.
+The files referenced 
+
+\subsection{Creating the AST Types} % (fold)
+\label{sub:creating_the_ast_types}
+The nature of a combinator parser is that it closely resembles the grammar that it parses. 
+This means that it exists as a set of functions that each parse some small portion of the grammar, all combined to build an entire parser. 
+Due to the strongly-typed nature of Haskell, this means that there needs to be a system of types representing the \gls{ast}, looking much like the example in \autoref{lst:an_example_ast_data_type}, which can be found in \mintinline{text}{Grammar.hs}.\\
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=101]{haskell}
+data MetaspecDefblock
+    = NameDefblock String
+    | VersionDefblock String
+    | UsingDefblock [MetaspecFeature]
+    | TruthsDefblock SemanticTruthsList
+    | LanguageDefblock StartRule [LanguageRule]
+    deriving (Show, Eq)    
+\end{minted}
+\caption{An Example AST Data-Type}
+\label{lst:an_example_ast_data_type}
+\end{listing}
+
+While this process was initially assumed to be a mostly rote translation of the Metaspec language grammar (see \autoref{cha:designing_the_metalanguage}), this turned out to not be the case in two main ways (as discussed in \autoref{ssub:designing_the_metaparse_ast}:
+\begin{enumerate}
+    \item \textbf{Haskell Data-Type Restrictions:} The structure of Haskell's data-type declarations precludes some kinds of recursive definition.
+    To avoid these problems it is necessary to introduce indirect declarations as seen below.
+\begin{minted}[xleftmargin=1.5cm, firstnumber=181]{haskell}
+data SemanticRule
+    = EnvironmentInputRule SemanticType SyntaxAccessBlock SyntaxAccessList
+    | EnvironmentAccessRuleProxy EnvironmentAccessRule
+    | SpecialSyntaxRuleProxy SpecialSyntaxRule
+    | SemanticEvaluationRuleList SemanticEvaluationRuleList
+    deriving (Show, Eq)
+\end{minted}
+    In such cases, the actual declaration of the \gls{ast} node type has to be moved out to a different data declaration in order to be properly available elsewhere and avoid recursive definitions.
+\begin{minted}[xleftmargin=1.5cm, firstnumber=198]{haskell}
+data SpecialSyntaxRule = SpecialSyntaxRule
+    SemanticType
+    SemanticSpecialSyntax
+    [AccessBlockOrRule]
+    deriving (Show, Eq)
+\end{minted}
+    \item \textbf{Production Representation:} Certain portions of the language grammar do not correspond directly to constructs that can be created in Haskell data-types.
+    There are multiple parts of the \gls{metaspec} grammar that have had to be extracted appropriately, usually two-element alternations.
+    This is to allow these alternations to be appropriately expressed in lists, and usually involved the \mintinline{haskell}{either} type to provide the appropriate alternation.
+\begin{minted}[xleftmargin=1.5cm, firstnumber=198]{haskell}
+type AccessBlockOr a = Either SyntaxAccessBlock a
+\end{minted}
+\end{enumerate}
+
+The other key realisation of this process was that, as an \textit{abstract} syntax tree, it does not need to represent much of the concrete syntax of \gls{metaspec} that is used in parsing. 
+Initial versions of the \gls{ast} grammar incorporated notation for portions of concrete syntax that it turns out were unneeded later on. 
+
+% subsection creating_the_ast_types (end)
+
+\subsection{Developing the Parser} % (fold)
+\label{sub:developing_the_parser}
+% Lexer Functions then Parser itself. 
+% Having to use lookahead. 
 % Designing state into the parser (two stage impl)
-% Two-stage implementation of the lexer and parser
-% Grammar then Lexer elements then Parser parts 
-% Got it to a state where it could parse metaspec and THEN Integrated the state required to perform precondition checking. 
+
+The process of developing the parser (in reality, the integrated lexer and parser) took place in two parts: development of the lexer functions, and development of the parser itself. 
+Due to the lexer functionality integrated into Megaparsec, it was trivial to create the basic set of lexer functions for parsing \gls{metaspec}. 
+These functions perform the basic job of a lexer, including the consumption of whitespace and comments (which have no semantic meaning --- \autoref{sub:comments_in_metaspec}), and the basic parsers for lexemes and terminals of the language.
+Some of this functionality can be seen in \autoref{lst:basic_lexer_functionality}, and is all partitioned into its own file in \mintinline{text}{Metalex.hs}.
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=28]{haskell}
+spaceConsumer :: ParserST ()
+spaceConsumer = L.space (void spaceChar) lineComment blockComment
+    where
+        lineComment = L.skipLineComment "//"
+        blockComment = L.skipBlockComment "(*" "*)"
+\end{minted}
+\caption{Basic Lexer Functionality}
+\label{lst:basic_lexer_functionality}
+\end{listing}
+
+With the basic lexing functionality complete, and armed with the data declarations for the \gls{ast}, it was possible to start building the actual language parser. 
+This process was made much more simple than there was any reason to expect through the usage of Megaparsec, with each parsing function almost looking like a description of the corresponding portion of the grammar (in part due to the fact that \mintinline{haskell}{Parser} is an instance of \mintinline{haskell}{Alternative}. 
+The monadic nature of the parser meant that \mintinline{haskell}{do} notation could be used, allowing the sequencing of parsing operations appropriately. 
+This extreme similarity between the grammar and the parser can be quite clearly illustrated through observation of the parser code in \mintinline{text}{Metaparse.hs}, with an example given in \autoref{lst:comparing_the_parser_and_the_grammar_for_syntax_primaries}.\\
+
+\begin{figure}[!htb]
+\centering
+\begin{minipage}{0.65\textwidth}
+\centering
+\begin{minted}[firstnumber=246]{haskell}
+syntaxPrimary :: ParserST SyntaxPrimary
+syntaxPrimary = syntaxOptional
+    <|> syntaxRepeated
+    <|> syntaxGrouped
+    <|> syntaxSpecial
+    <|> terminalProxy
+    <|> nonTerminalProxy
+\end{minted}
+\end{minipage}
+\begin{minipage}{0.34\textwidth}
+\centering
+\begin{minted}[firstnumber=247]{text}
+syntax-primary = 
+    syntax-optional | 
+    syntax-repeated |
+    syntax-grouped |
+    syntax-special |
+    non-terminal |
+    terminal;
+\end{minted}
+\end{minipage}
+\caption{Comparing the Parser and the Grammar for Syntax Primaries}
+\label{lst:comparing_the_parser_and_the_grammar_for_syntax_primaries}
+\end{figure}
+
+The obviously readable nature of the parsers for each of the portions of the language led to an appropriate strategy for building Metaparse.
+Starting at the language start symbol, it was possible to build the parser for each production one-by-one, stubbing out the sub-parsers as \mintinline{haskell}{undefined} and relying on the type-system to ensure correctness.
+In practice, this proved to be an excellent implementation strategy, producing very readable parsers such as that seen in \autoref{lst:an_example_parser_combinator_special_syntax_rule}.
+With such an elegant \gls{api}, the parser was mostly simple to build. 
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=332]{haskell}
+specialSyntaxRule :: ParserST SpecialSyntaxRule
+specialSyntaxRule = do
+    specialType <- semanticType
+    specialOp <- semanticSpecialSyntax
+    semanticBlocks <- specialSyntaxBlock $
+        accessBlockOrRule `sepBy` multilineListSep
+    return (SpecialSyntaxRule specialType specialOp semanticBlocks)
+\end{minted}
+\caption{An Example Parser Combinator --- Special Syntax Rule}
+\label{lst:an_example_parser_combinator_special_syntax_rule}
+\end{listing}
+
+\subsection{Parsers and Lookahead} % (fold)
+\label{sub:parsers_and_lookahead}
+One of the main challenges that was encountered in parsing was down to a badly designed grammar. 
+Combinator parsers have the capability to consume input, and if they do consume tokens on a branch they are then `locked' into that branch by default (in other words, backtracking is off-by-default).
+Unfortunately, the \gls{metaspec} grammar is badly factored in the context of the multiple kinds of semantic rule, as two of them begin with a \mintinline{text}{semantic-type}, as seen in \autoref{lst:the_badly_factored_semantic_grammar}.
+This means that if, in a parser alternation, it starts to parse one, successfully parses a \mintinline{haskell}{SemanticType} (which consumes tokens) and then later fails, it will try the next branch of the alternation.
+However, the \mintinline{haskell}{SemanticType} has already been consumed, and so it cannot match, causing the entire parser to fail. 
+This is emphatically \textit{not} the behaviour that should take place in such cases. 
+
+\begin{listing}[!htb]
+\begin{minted}[numbers=none]{text}
+environment-input-rule = semantic-type, ... ;
+semantic-evaluation-rule = semantic-type, ... ;
+\end{minted}
+\caption{The Badly Factored Semantic Grammar}
+\label{lst:the_badly_factored_semantic_grammar}
+\end{listing}
+
+The initial approach was to return to the drawing board on the language grammar, attempting to factor it differently. 
+However, this brought significant complication to both the language grammar and the \gls{ast} data-types and was discarded due to how it compromised understanding. 
+The solution, instead, was to invoke the arbitrary lookahead parsing facility provided my Megaparsec: this takes the form of \mintinline{haskell}{try}. 
+What this function does is allow a parser that fails to behave as if it has consumed no input. 
+This means that the entire parser will backtrack successfully until it matches the correct branch.
+The keyword is applied to parsers themselves, as seen in \autoref{lst:parsing_with_infinite_lookahead}.
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=308]{haskell}
+semanticRule :: ParserST SemanticRule
+semanticRule = try semanticEvaluationRuleList
+    <|> try environmentInputRule
+    <|> try environmentAccessRuleProxy
+    <|> specialSyntaxRuleProxy
+\end{minted}
+\caption{Parsing with Infinite Lookahead}
+\label{lst:parsing_with_infinite_lookahead}
+\end{listing}
+
+One might wonder why the use of lookahead was not the first solution considered for solving this problem, but the reason is simple: it is difficult to produce good parser error messages in the presence of lookahead.
+Unfortunately the significant increase in grammatical complexity added by the aforementioned alterations to the factoring of these rules made the use of arbitrary lookahead the better option. 
+
+% subsection parsers_and_lookahead (end)
+
+% subsection developing_the_parser (end)
+
+\subsection{Precondition Verification} % (fold)
+\label{sub:precondition_verification}
+Implementing the precondition verifier was a challenging exercise in the transformation of an algorithm (see \autoref{ssub:precondition_verification_in_the_parser}) into a concrete implementation.
+The first task for implementing these checks was to add a user state to the parser.
+While all parsing functions up to this point used the default Megaparsec \mintinline{haskell}{Parser} type, this would no longer be possible as it provided no useful access to its internal state. 
+To take the parser beyond just being capable of parsing \gls{metaspec}, some work would be required. 
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=50]{haskell}
+data MetaState = MetaState {
+    importedFeatures      :: [MetaspecFeature],
+    definedNTs            :: [NonTerminalIdentifier],
+    usedNTs               :: S.Set NonTerminalIdentifier,
+    importedTypes         :: [SemanticType],
+    importedSpecialSyntax :: [SemanticSpecialSyntax],
+    parserPosition        :: RulePosition
+} deriving (Show)
+\end{minted}
+\caption{The Parser State}
+\label{lst:the_parser_state}
+\end{listing}
+
+The first step was to redefine the parser type used in the parser and lexer functions. 
+As state was required, the obvious choice was to reach for the \mintinline{haskell}{StateT} monad transformer, so that the parser could still act as a parser. 
+A monad transformer is a monadic type that modifies the behaviour of another monad: in essence, they provide a way to combine the behaviour of multiple monads. 
+From this, it was possible to construct a new type for the parser: \mintinline{haskell}{type ParserST = StateT MetaState Parser}, using the state type defined in \autoref{lst:the_parser_state}.
+This new type and its supporting functions can be seen in \mintinline{text}{Parser.hs}, and contains all of the necessary information to implement the precondition checking algorithm.
+
+\subsubsection{Tracking Rule Position} % (fold)
+\label{ssub:tracking_rule_position}
 % How did the NT tracker come about - why was it insufficient to track all nt parses the same way? -> they are all parsed the same, but they have different semantic meaning for the precondition verification. 
+
+Verifying these preconditions was almost a direct implementation of the algorithm explored in \autoref{sub:verifier_precondition_validation}, except for one thing. 
+The parser, by default, has no notion of where it is in parsing the file: every \mintinline{text}{non-terminal} gets parsed by the same sub-parser \mintinline{haskell}{nonTerminal}. 
+Unfortunately, the precondition verification algorithm needs to know whether a given non-terminal parse is when the non-terminal is being \textit{defined} or when it is being \textit{used}. 
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=47]{haskell}
+data RulePosition = Head | Body | None deriving (Show)
+\end{minted}
+\caption{The Rule Position}
+\label{lst:the_rule_position}
+\end{listing}
+
+To solve this problem, a final element was integrated into the parser state, an indicator of where the parser was in a rule, updated as the parser progresses, as seen in \autoref{lst:the_rule_position}.
+This is accompanied by a set of functions for updating this position.
+Assuming the positional indicator is correctly updated, the parser is now able to track whether a given non-terminal parse is being defined or used, and hence the non-terminal can be added to the appropriate lists.
+The process of updating this position is not particularly elegant, and impinges more upon the parser than is ideal, but it is functional and allows the algorithm to operate correctly (see \autoref{lst:updating_the_parser_rule_position}).
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=159]{haskell}
+languageRule :: ParserST LanguageRule
+languageRule = do
+    modify setPositionHead
+    prodName <- nonTerminal
+    void definingSymbol
+    modify setPositionBody
+    ruleBody <- languageRuleBody
+    modify setPositionNone
+    return (LanguageRule prodName ruleBody)
+\end{minted}
+\caption{Updating the Parser Rule Position}
+\label{lst:updating_the_parser_rule_position}
+\end{listing}
+
+% subsubsection tracking_rule_position (end)
+
+\subsubsection{Keeping the Clutter out of the Parser} % (fold)
+\label{ssub:keeping_the_clutter_out_of_the_parser}
+A direct transformation of the precondition checker algorithm from the pseudocode to code would have added far too much clutter to the parser, whose readability owes much to the aesthetic qualities of combinator parsing. 
+To this end, the implementation challenge emerged from the necessity to implement the precondition checks in such a way that it does not add unnecessary clutter to the parser.
+This meant removing as much of the checking functionality as possible from the parser. 
+
+\begin{listing}[!htb]
+\begin{minted}[firstnumber=646]{haskell}
+semanticType :: ParserST SemanticType
+semanticType = checkTypeDefined parser
+    where
+        parser = AnyType <$ semanticTypeString "any"
+            <|> ...
+\end{minted}
+\caption{Precondition Verification in the Parser}
+\label{lst:precondition_verification_in_the_parser}
+\end{listing}
+
+In the final result, the intrusion is small, with much of the work factored out into functions. 
+This holds especially true for the checks that can be implemented during the parse (multiple definitions, type and special-syntax availability), which are single functions that do not interfere with the appearance of the parser.
+An example of this can be seen in \autoref{lst:precondition_verification_in_the_parser}, and it is clear that it adds very little visual clutter and hence maintains parser readability.
+
+% subsubsection keeping_the_clutter_out_of_the_parser (end)
+
+% subsection precondition_verification (end)
 
 % section building_the_lexer_and_parser (end)
 
@@ -180,6 +545,7 @@ These issues also illustrated the downside of not scheduling work, as doing so w
 % The theoretical underpinning of this. 
 % Fun with the state monad for the verification algorithm.
 % Examine the design problem of providing reporting abilities via the RuleTag concept -> not in the core algorithm, so hence an addition to it.
+% Building one portion of the verifier at a time.
 
 % section building_the_verification_framework (end)
 
