--- a/doc/dissertation/resources/software_readme.tex
+++ b/doc/dissertation/resources/software_readme.tex
@@ -4,6 +4,29 @@ This section will contain a guide to the project as a whole, as well as the nece
 
 \section{The Project Structure} % (fold)
 \label{sec:the_project_structure}
+The implementations for each of the metacompiler components are contained in the following files. 
+Each of these files is given relative to the project root in \mintinline{text}{absol/}:
+\begin{itemize}
+    \item \textbf{The Metacompiler Front-End:} The files for the front-end are contained in:
+    \begin{itemize}
+        \item \mintinline{text}{./app/Main.hs}
+        \item \mintinline{text}{./app/Cmdargs.hs}
+    \end{itemize}
+    \item \textbf{Metaparse:} The files for metaparse are contained in:
+    \begin{itemize}
+        \item \mintinline{text}{./src/Absol/Metaparse.hs}
+        \item \mintinline{text}{./src/Absol/Metaparse/Grammar.hs}
+        \item \mintinline{text}{./src/Absol/Metaparse/Parser.hs}
+        \item \mintinline{text}{./src/Absol/Metaparse/Utilities.hs}
+        \item \mintinline{text}{./src/Absol/Metalex.hs}
+        \item \mintinline{text}{./src/Absol/Metaspec.hs}
+        \item \mintinline{text}{./src/Absol/Metaspec/Special.hs}
+    \end{itemize}
+    \item \textbf{Metaverify:}
+    \item \textbf{Misc:} There are also stub implementation files for other components of the metacompiler toolchain that have since been declared as out of project scope. 
+\end{itemize}
+
+% TODO complete this section
 
 % section the_project_structure (end)
 
